src/petal/snapshots/petal__petal__parser__tests__let_declarations-2.snap
---
source: src/petal/parser.rs
expression: "parse_stmt(\"let a = b + c * d\")"
---
Let {
    name: "a",
    init: BinaryOp {
        left: Ident {
            name: "b",
            span: Span {
                start: Pos {
                    line: 0,
                    col: 9,
                },
                end: Pos {
                    line: 0,
                    col: 9,
                },
            },
        },
        op: Token {
            token_type: Plus,
            lexeme: "+",
            literal: None,
            span: Span {
                start: Pos {
                    line: 0,
                    col: 11,
                },
                end: Pos {
                    line: 0,
                    col: 11,
                },
            },
        },
        right: BinaryOp {
            left: Ident {
                name: "c",
                span: Span {
                    start: Pos {
                        line: 0,
                        col: 13,
                    },
                    end: Pos {
                        line: 0,
                        col: 13,
                    },
                },
            },
            op: Token {
                token_type: Star,
                lexeme: "*",
                literal: None,
                span: Span {
                    start: Pos {
                        line: 0,
                        col: 15,
                    },
                    end: Pos {
                        line: 0,
                        col: 15,
                    },
                },
            },
            right: Ident {
                name: "d",
                span: Span {
                    start: Pos {
                        line: 0,
                        col: 17,
                    },
                    end: Pos {
                        line: 0,
                        col: 17,
                    },
                },
            },
            span: Span {
                start: Pos {
                    line: 0,
                    col: 13,
                },
                end: Pos {
                    line: 0,
                    col: 17,
                },
            },
        },
        span: Span {
            start: Pos {
                line: 0,
                col: 9,
            },
            end: Pos {
                line: 0,
                col: 17,
            },
        },
    },
    span: Span {
        start: Pos {
            line: 0,
            col: 1,
        },
        end: Pos {
            line: 0,
            col: 17,
        },
    },
}
